--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   sticky_headers: ^0.3.0
   permission_handler: ^11.3.1
   contacts_service: ^0.6.3
+  get_storage: ^2.1.1
 
 dev_dependencies:
   build_runner: ^2.4.8
